2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow.c: Use a bool when possible instead of int integers.
	* lib/gshadow.c: Remove __setsgNIS() -never used).
	* lib/gshadow.c: Avoid multi-statements lines.
	* lib/gshadow.c: Avoid assignments in comparisons.
	* lib/gshadow.c: ptr[nelem] is a string. Initialize it to NULL
	instead of '\0'.
	* lib/gshadow.c: Add brackets and parenthesis.
	* lib/gshadow.c: The size argument of strncpy is a size_t and the
	size argument of fgets is an int.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: Add brackets.
	* lib/groupio.c: Make sure malloc receives a size_t.
	* lib/groupio.c: Avoid multi-statements lines.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgetspent.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spwd.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getdef.h, lib/getdef.c: Add getdef_ulong().
	* lib/getdef.c: Added TODOs because of lack of error checking.
	* lib/getdef.c: The size argument of fgets is an int, not a
	size_t.
	* lib/getdef.c: Avoid multi-statements lines.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/id.c: Make sure malloc receives a size_t.
	* src/id.c: Use a %lu format and cast group and user IDs to
	unsigned long integers.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/sulogin.c: Ignore the return value of signal().

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groups.c: sys_ngroups is only used when HAVE_GETGROUPS is
	defined.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Ignore return value of time() when use with a
	non NULL argument.
	* src/faillog.c: Use a %lu format and cast number of days to
	unsigned long integers.
	* src/faillog.c: Cast dates to time_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>
